ensure navbar never causes page width overflow

--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ body {
     height: 42px;
   }
   .dropdown, .dropbtn, .navbar > a {
-    font-size: 14px;
+    font-size: 13px;
   }
   .dropdown-content {
     width: 82px;
